modified meta git

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -44,7 +44,7 @@
     <ImplicitlyExpandNETStandardFacades>false</ImplicitlyExpandNETStandardFacades>
     <ImplicitlyExpandDesignTimeFacades>false</ImplicitlyExpandDesignTimeFacades>
   </PropertyGroup>
-  <ItemGroup>     <Compile Include="Assets\BasicMover.cs" />
+  <ItemGroup>     <Compile Include="Assets\Scripts\BasicMover.cs" />
      <Compile Include="Assets\Scripts\Controller.cs" />
      <Compile Include="Assets\Scripts\GameManager.cs" />
      <Compile Include="Assets\Scripts\MouseLooker.cs" />
